src/objects/QPMS__Region__c.object
<CustomObject>
    <description>Store custom grouping.</description>
    <fields>
        <fullName>QPMS__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Code__c</fullName>
        <description>This field is used to store Code</description>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <description>This field is used to store Type value</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>val1</fullName>
                </value>
                <value>
                    <fullName>val2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Region</label>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>